Minor spacing fixes on Project page stylesheet.

--- a/src/themes/pece_scholarly_lite/assets/sass/partials/nodes/pece-project.sass
+++ b/src/themes/pece_scholarly_lite/assets/sass/partials/nodes/pece-project.sass
@@ -10,6 +10,12 @@
   .field-item
     margin-bottom: 1rem
 
+.field-name-field-pece-substantive-logic,
+.field-name-field-pece-funding-agency,
+.field-name-field-pece-multiple-link
+  a
+    padding: 6px 8px 6px 0
+
 .field-name-field-pece-proj-struct-analytics
   .field-item
     display: block
